tests/fixtures/invalid/spec_inheritance_fragment.etcm
spec Child <- specs/base.etcm#bad:
  value: int
